--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>se.lexicon</groupId>
-  <artifactId>assignment-todo-it</artifactId>
+  <artifactId>assignment-todoitem-it</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>assignment-todo-it</name>
+  <name>assignment-todoitem-it</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -15,6 +15,12 @@
   </properties>
 
   <dependencies>
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.33</version>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
